fix: z-index of bottle animation

--- a/src/components/Bottle/Bottle.module.scss
+++ b/src/components/Bottle/Bottle.module.scss
@@ -1,5 +1,7 @@
 .bottle {
   cursor: pointer;
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column-reverse;
   margin: 25px;
